[tool.poetry]
name = "mwc-pedprog-unit00-project-drawing"
version = "0.1.0"
description = ""
authors = ["Chris Proctor <chris@chrisproctor.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
superturtle = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
